<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jarek.mathprogram.MainActivity"
    android:background="@color/background">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_end"
        android:id="@+id/button_end"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="click_finish" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiplication"
        android:id="@+id/button_mul"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="click_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_substraction"
        android:id="@+id/button_sub"
        android:layout_above="@+id/button_mul"
        android:layout_centerHorizontal="true"
        android:onClick="click_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_addition"
        android:id="@+id/button_add"
        android:layout_above="@+id/button_sub"
        android:layout_centerHorizontal="true"
        android:onClick="click_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_divide"
        android:id="@+id/button_div"
        android:layout_below="@+id/button_mul"
        android:layout_centerHorizontal="true"
        android:onClick="click_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_power"
        android:id="@+id/button_pow"
        android:layout_below="@+id/button_div"
        android:layout_centerHorizontal="true"
        android:onClick="click_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_root"
        android:id="@+id/button_root"
        android:layout_below="@+id/button_pow"
        android:layout_centerHorizontal="true"
        android:onClick="click_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_random"
        android:id="@+id/button_rand"
        android:layout_above="@+id/button_add"
        android:layout_centerHorizontal="true"
        android:onClick="click_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_level"
        android:id="@+id/textView_level"
        android:textColor="@color/textview"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button_rand"
        android:layout_alignEnd="@+id/button_rand" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="50%"
        android:id="@+id/textView_percent"
        android:textColor="@color/textview"
        android:layout_alignTop="@+id/textView_level"
        android:layout_toRightOf="@+id/textView_level"
        android:layout_toEndOf="@+id/textView_level"
        android:layout_marginLeft="10dp" />


</RelativeLayout>
